--- a/css/main.css
+++ b/css/main.css
@@ -115,15 +115,31 @@ nav a {
   margin-top: 2em;
   /* border: 1px solid white; */
   width: 100vw;
-  height: 50vh;
+  height: 30vh;
   overflow: hidden;
 }
 .hero-img img {
-  /* margin-left: auto; */
-  margin-right: auto;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 /* SECTIONS */
 .section {
   padding: 1em;
+}
+
+/* STATEMENT */
+.statement-images {
+  margin: 1em;
+}
+.statement-images img {
+  margin: 1em;
+}
+.img-fm {
+  width: 50%;
+  /* object-fit: cover; */
+}
+.img-impulso {
+  width: 20%;
 }
