--- a/css/main.css
+++ b/css/main.css
@@ -140,6 +140,25 @@ nav a {
   width: 25%;
 }
 
+/* VIDEO */
+.section-video {
+  margin-top: 2em;
+  padding: .5em;
+  /* width: 100%; */
+  /* height: 50vh; */
+}
+.video-wrapper {
+position: relative;
+padding-bottom: 56.25%; /* 16:9, for an aspect ratio of 1:1 change to this value to 100% */
+}
+iframe{
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+}
+
 /* BIOS */
 .section-bios {
   flex-wrap: wrap;
@@ -215,7 +234,7 @@ nav a {
   /* STATEMENT */
   .statement-images {
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     align-items: baseline;
   }
   .statement-images img {
@@ -232,7 +251,7 @@ nav a {
   /* BIOS */
   .bio-card {
     width: 25%;
-    padding: 1em;
+    padding: 3em;
   }
   /* GALERIA */
   .section-galeria {
